--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/Anguswaffle/employee-tracker/issues"
   },
-  "homepage": "https://github.com/Anguswaffle/employee-tracker#readme"
+  "homepage": "https://github.com/Anguswaffle/employee-tracker#readme",
+  "dependencies": {
+    "asciiart-logo": "^0.2.6",
+    "console.table": "^0.10.0",
+    "inquirer": "^8.2.0",
+    "mysql2": "^2.3.3"
+  }
 }
